docs/grammar.ebnf
(* CrashLang — Formal Grammar Specification *)
(* EBNF notation. Terminals are quoted or UPPERCASE. *)


(* ══════════════════════════════════════════════════════════════════════════ *)
(*  Program                                                                  *)
(* ══════════════════════════════════════════════════════════════════════════ *)

program        = { declaration } EOF ;


(* ══════════════════════════════════════════════════════════════════════════ *)
(*  Declarations                                                             *)
(* ══════════════════════════════════════════════════════════════════════════ *)

declaration    = fn_decl
               | let_decl
               | statement ;

fn_decl        = "fn" IDENTIFIER "(" [ param_list ] ")" block ;
param_list     = IDENTIFIER { "," IDENTIFIER } ;

let_decl       = "let" IDENTIFIER "=" expression ";" ;


(* ══════════════════════════════════════════════════════════════════════════ *)
(*  Statements                                                               *)
(* ══════════════════════════════════════════════════════════════════════════ *)

statement      = expr_stmt
               | if_stmt
               | while_stmt
               | for_stmt
               | return_stmt
               | break_stmt
               | continue_stmt
               | free_stmt
               | block ;

expr_stmt      = expression ";" ;

if_stmt        = "if" expression block [ "else" ( if_stmt | block ) ] ;

while_stmt     = "while" expression block ;

for_stmt       = "for" IDENTIFIER "in" expression block ;

return_stmt    = "return" [ expression ] ";" ;

break_stmt     = "break" ";" ;

continue_stmt  = "continue" ";" ;

free_stmt      = "free" "(" expression ")" ";" ;

block          = "{" { declaration } "}" ;


(* ══════════════════════════════════════════════════════════════════════════ *)
(*  Expressions                                                              *)
(*                                                                           *)
(*  Precedence (lowest to highest):                                          *)
(*    1. Assignment       =           right-associative                      *)
(*    2. Logical OR       or          left-associative                       *)
(*    3. Logical AND      and         left-associative                       *)
(*    4. Equality         == !=       left-associative                       *)
(*    5. Comparison       < <= > >=   left-associative                       *)
(*    6. Addition         + -         left-associative                       *)
(*    7. Multiplication   * / %       left-associative                       *)
(*    8. Unary            - not       right-associative (prefix)             *)
(*    9. Postfix          () [] .     left-associative                       *)
(*   10. Primary          literals, identifiers, grouped, etc.               *)
(* ══════════════════════════════════════════════════════════════════════════ *)

expression     = assignment ;

assignment     = or_expr [ "=" assignment ] ;       (* right-associative *)

or_expr        = and_expr { "or" and_expr } ;

and_expr       = equality { "and" equality } ;

equality       = comparison { ( "==" | "!=" ) comparison } ;

comparison     = addition { ( "<" | "<=" | ">" | ">=" ) addition } ;

addition       = multiplication { ( "+" | "-" ) multiplication } ;

multiplication = unary { ( "*" | "/" | "%" ) unary } ;

unary          = ( "-" | "not" ) unary
               | postfix ;

postfix        = primary { call | index | field_access } ;

call           = "(" [ arg_list ] ")" ;
arg_list       = expression { "," expression } ;

index          = "[" expression "]" ;

field_access   = "." IDENTIFIER ;


(* ══════════════════════════════════════════════════════════════════════════ *)
(*  Primary Expressions                                                      *)
(* ══════════════════════════════════════════════════════════════════════════ *)

primary        = INT_LITERAL
               | FLOAT_LITERAL
               | STRING_LITERAL
               | "true" | "false" | "nil"
               | IDENTIFIER
               | "(" expression ")"
               | array_literal
               | new_expr
               | ref_expr
               | deref_expr
               | move_expr
               | lambda_expr
               | match_expr ;

array_literal  = "[" [ expression { "," expression } ] "]" ;

new_expr       = "new" IDENTIFIER "{" [ field_init { "," field_init } ] "}" ;
field_init     = IDENTIFIER ":" expression ;

ref_expr       = "ref" "(" expression ")" ;

deref_expr     = "deref" "(" expression ")" ;

move_expr      = "move" "(" expression ")" ;

lambda_expr    = "fn" "(" [ param_list ] ")" block ;

match_expr     = "match" expression "{" { match_arm } "}" ;
match_arm      = "when" ( expression | "_" ) "=>" expression [ "," ] ;


(* ══════════════════════════════════════════════════════════════════════════ *)
(*  Lexical Grammar                                                          *)
(* ══════════════════════════════════════════════════════════════════════════ *)

IDENTIFIER     = ALPHA { ALPHA | DIGIT | "_" } ;
ALPHA          = "a" .. "z" | "A" .. "Z" | "_" ;
DIGIT          = "0" .. "9" ;

INT_LITERAL    = DIGIT { DIGIT } ;
FLOAT_LITERAL  = DIGIT { DIGIT } "." DIGIT { DIGIT } ;

STRING_LITERAL = '"' { CHAR | ESCAPE } '"' ;
CHAR           = (* any character except '"', '\', and newline *) ;
ESCAPE         = "\" ( "n" | "t" | "r" | "\" | '"' | "0" ) ;

LINE_COMMENT   = "//" { (* any character except newline *) } NEWLINE ;
BLOCK_COMMENT  = "/*" { (* any character or nested BLOCK_COMMENT *) } "*/" ;

(* Block comments nest: /* outer /* inner */ still in outer */ *)


(* ══════════════════════════════════════════════════════════════════════════ *)
(*  Keywords                                                                 *)
(* ══════════════════════════════════════════════════════════════════════════ *)

(* Reserved words — cannot be used as identifiers:
   let  fn  if  else  while  for  in  return  break  continue
   true  false  nil  and  or  not  new  ref  deref  move  free
   match  when
*)
